--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <h1>Web index</h1>
 
 <h2><a href="https://blog.edlison.com">blog</a></h2>
+<h2><a href="https://github.com/Edlison">github</a></h2>
 
 </body>
 
