--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <h2><a href="https://blog.edlison.com">blog</a></h2>
 <h2><a href="https://github.com/Edlison">github</a></h2>
+<h2><a href="https://t.me/edlison">telegram</a></h2>
 
 </body>
 
